# Aloha

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: Aloha.hpp  platform.hpp  utils.hpp
lib/lua/include/: luaconf.h
romfs/lua/: Aloha2D.lua  example.lua  main.lua
romfs/lua/Aloha/: Aloha.lua  Utils.lua
romfs/lua/Aloha/rendering/: Circle.lua  Color.lua  Rectangle.lua  Window.lua
src/: LuaDraw.cpp  LuaUtilities.cpp  main.cpp  platform-citro3d.cpp  platform_raylib.cpp
src/Input/: GamepadEnum.hpp  Input.hpp  KeyboardEnum.hpp
src/Input/platform/: citro3d.cpp  raylib.cpp
src/Renderer/: Color.hpp  Renderer.hpp  platform.hpp
src/Renderer/Shapes/: Circle.cpp  Circle.hpp  Rectangle.cpp  Rectangle.hpp  Text.cpp  Text.hpp
src/Renderer/platform/: citro3d.cpp  raylib.cpp
src/Window/: Window.cpp  Window.hpp  platform.hpp
src/Window/platform/: citro3d.cpp  raylib.cpp
src/include/: LuaDraw.hpp  LuaUtilities.hpp
src/lua/: Aloha.lua  Utils.lua  main.lua
src/lua/rendering/: Circle.lua  Color.lua  Rectangle.lua  Window.lua
src/platform/: citro3d.cpp  raylib.cpp
